forge/1.17.1/knowledge/version-changes/1.19.x.md
# 版本变更记录：1.19.x

## 1.19.4 Forge（45.x）重要变更

### RegistryEvent → DeferredRegister 过渡

1.19.x 是 DeferredRegister 成熟的版本，推荐迁移：

```java
// ✅ 推荐方式（1.19.4+）
public static final DeferredRegister<Block> BLOCKS =
    DeferredRegister.create(ForgeRegistries.BLOCKS, MOD_ID);

// ❌ 旧方式（1.19.4 仍可用但不推荐）
@SubscribeEvent
public void onRegister(RegisterEvent<Block> event) {
    event.register(ForgeRegistries.BLOCKS, "my_block", MyBlock::new);
}
```

### ForgeGradle 升级（FG5 → FG6）

1.19.2+ ForgeGradle 升级到 6.x：

```groovy
// 旧（FG5）
buildscript {
    repositories {
        maven { url "https://maven.minecraftforge.net/" }
    }
    dependencies {
        classpath "net.minecraftforge.gradle:ForgeGradle:5.1.+"
    }
}

// 新（FG6）
plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}
```

### 1.19.x 与 1.20.x 的主要差异

| 项目 | 1.19.x | 1.20.x |
|------|---------|---------|
| Java 版本 | Java 17+ | Java 17+ |
| ForgeGradle | 5.x 或 6.x | **6.x only** |
| Registry API | DeferredRegister | DeferredRegister（一致） |
| EntityType | `EntityType.Builder` | `EntityType.Builder`（一致） |
| mods.toml | 支持 | 支持（一致） |
| DeferredRegister for Vanilla | 1.18+ 支持 | 完全支持 |

### 1.19.x 特有配置

```properties
# 1.19.4
minecraft_version=1.19.4
forge_version=44.1.0
forge_version_range=[44,)
```

### 迁移注意事项

1. **Java 版本**：两个版本均要求 Java 17+，但建议在 build.gradle 中明确指定：
   ```groovy
   java.toolchain.languageVersion = JavaLanguageVersion.of(17)
   ```

2. **Mixin 兼容性**：Mixin 7.x 在 1.19.x 和 1.20.x 均可使用，插件配置一致。

3. **DataGen**：RecipeProvider 和 LootTableProvider API 在 1.19.x 和 1.20.x 基本一致。

## 1.17.1 → 1.18.2 迁移注意事项

### ForgeGradle 升级（FG4 → FG5/FG6）

1.18.x 是 ForgeGradle 5 升级的重要版本：

```groovy
// 旧（FG4，1.17.1）
buildscript {
    repositories {
        maven { url "https://maven.minecraftforge.net/" }
    }
    dependencies {
        classpath "net.minecraftforge.gradle:ForgeGradle:4.1.+"
    }
}

// 新（FG5/FG6，1.18.x）
plugins {
    id 'net.minecraftforge.gradle' version '[5.1,)'
}
```

### 1.17.x 与 1.18.x 的主要差异

| 项目 | 1.17.x | 1.18.x |
|------|---------|---------|
| Java 版本 | Java 16 | Java 17+ |
| ForgeGradle | 4.x | 5.x / 6.x |
| Registry API | `RegistryEvent.Register<T>` 或 `DeferredRegister`（实验） | `DeferredRegister`（成熟，推荐） |
| EntityType | `EntityType.Builder`（一致） | `EntityType.Builder`（一致） |
| mods.toml | 支持 | 支持（一致） |
| Mappings | MCP（主要） | official/Parchment（推荐） |

### 1.17.1 特有配置

```properties
# 1.17.1
minecraft_version=1.17.1
forge_version=37.1.0
forge_version_range=[37,)
```

### 迁移注意事项

1. **Java 版本**：1.17.1 用 Java 16，1.18.2+ 需要 Java 17+，建议在 build.gradle 中明确指定：
   ```groovy
   java.toolchain.languageVersion = JavaLanguageVersion.of(17)
   ```

2. **Mappings 切换**：1.18.x 官方推荐使用 official Mojang Mappings 或 Parchment，MCP 映射在 1.18.2+ 逐步废弃。

3. **BlockBehaviour.Properties API**：
   ```java
   // ❌ 已移除（1.17.1 有，1.18.x 移除）
   BlockBehaviour.Properties.create(Material.WOOD)

   // ✅ 1.18.x 正确方式
   BlockBehaviour.Properties.of(Material.WOOD)
       .mapColor(MapColor.WOOD)
       .strength(2.0f)
       .noOcclusion();
   ```

4. **Mixin 兼容性**：Mixin 7.x 在 1.18.x 可用，配置格式一致。

5. **DataGen**：1.18.x DataGen API 变化较大，`GatherDataEvent` 注册方式保持一致，但 Provider 内部 API 有调整。
